# collie

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  _test_merge_1775015048.md  _test_merge_1775015050.md  _test_merge_1775015225.md  _test_merge_1775015300.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  collie-example.yml
docs/: e2e-report.md  known-limitations.md  merge-queue-validation-setup.md  operator-guide.md  post-deploy-validation-runbook.md  research.md
docs/issues/: 000-epic-trustworthy-active-mode.md  001-queue-canonical-execution.md  002-authenticated-approvals.md  003-structured-llm-contract.md  004-persistent-incremental-bark.md  005-deepen-repo-profiling.md  006-github-native-review-metadata.md  007-github-native-governance-execution.md  PR-PLAN.md  README.md
src/collie/: config.py
src/collie/auth/: __init__.py  providers.py
src/collie/cli/: main.py
src/collie/commands/: approve.py  bark.py  mode.py  shake_hands.py  sit.py
src/collie/core/: analyzer.py  cost_tracker.py  dependency_resolver.py  executor.py  incremental.py  llm_client.py  models.py  prompts.py  question_bank.py
src/collie/core/stores/: philosophy_store.py  queue_store.py
src/collie/github/: __init__.py  graphql.py  rest.py
src/collie/mcp/: server.py
tests/: test_action.py  test_analyzer.py  test_approve.py  test_auth.py  test_bark_pipeline.py  test_cli.py  test_cost_tracker.py  test_dependency_resolver.py  test_e2e_issue14.py  test_executor.py  test_github.py  test_import.py  test_incremental.py  test_issue5_verification.py  test_issue6_verification.py  test_issue7_verification.py  test_issue8_verification.py  test_mcp.py  test_mcp_verification.py  test_mode.py  test_models.py  test_queue_approvals.py  test_queue_parsing.py  test_shake_hands.py  test_sit.py  verify_issue3.py  verify_issue9.py
