[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collie"
version = "0.1.0"
description = "AI-powered GitHub repository triage for solo maintainers"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "shaun0927"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "rich>=13.0",
    "anthropic>=0.25",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/shaun0927/collie"
Repository = "https://github.com/shaun0927/collie"
Issues = "https://github.com/shaun0927/collie/issues"

[project.scripts]
collie = "collie.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
